<resources>
    <string name="app_name">Videoer</string>
    <string name="folders">Folders</string>
    <string name="videos">Videos</string>
    <string name="total_videos">Total Videos</string>
    <string name="total_folders">Total Folders</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="themes">Themes</string>
    <string name="sort_order">Sort Order</string>
    <string name="exit">Exit</string>
    <string name="about">About</string>
    <string name="nav_header_title">Welcome to Videoer</string>
    <string name="video_name">Video name</string>
    <string name="folder_name">Folder name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock_icon">Lock</string>
    <string name="back_button">Back Button</string>
    <string name="menu_icon">Menu</string>
    <string name="repeat_icon">Repeat</string>
    <string name="next_icon">Next</string>
    <string name="previous_icon">Previous</string>
    <string name="fullscreen_icon">FullScreen</string>
    <string name="play_button">Play</string>
    <string name="audio_track">Audio Track</string>
    <string name="subtitles">Subtitles</string>
    <string name="audio_enhance">Audio Enhance</string>
    <string name="speed">Speed</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="pip_mode">PIP</string>
    <string name="change_orientation">Change Orientation</string>


</resources>