<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:background="@color/black">


    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:controller_layout_id="@layout/custom_control_view"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-47dp" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_button"
            app:tint="@color/white"
            android:layout_marginLeft="20dp"
            android:padding="5dp"/>

        
        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"/>
        
        <ImageView
            android:id="@+id/moreFeaturesBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/menu_dots_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu_icon"
            app:tint="@color/white"
            android:layout_marginEnd="70dp"
             />

    </LinearLayout>

    <ImageView
        android:id="@+id/lockBtn"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock_icon"
        android:src="@drawable/lock_open_icon"
        app:layout_constraintEnd_toEndOf="@+id/topController"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white"

        android:layout_marginRight="10dp"/>

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000"
        android:gravity="center"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/repeatBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/repeat_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_icon"
            app:tint="@color/white"

            android:layout_marginLeft="70dp"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/prevBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/previous_icon"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/previous_icon"
                app:tint="@color/white"
                android:layout_marginRight="40dp"
                android:padding="10dp"/>

            <ImageView
                android:id="@+id/playPauseBtn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/play_icon"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/play_button"
                app:tint="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:layout_marginHorizontal="20dp"
                />

            <ImageView
                android:id="@+id/nextBtn"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/next_icon"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="@string/next_icon"
                app:tint="@color/white"
                android:layout_marginLeft="40dp"
                android:padding="10dp"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/fullScreenBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/fullscreen_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_icon"
            app:tint="@color/white"
            android:layout_marginRight="70dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>